--- a/grade_7/index.html
+++ b/grade_7/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Bài tập trắc nghiệm</title>
+    <title>20 Minutes Test</title>
     <meta charset="utf-8">
 </head>
 <body>
