--- a/grade_9/index.html
+++ b/grade_9/index.html
@@ -7,7 +7,7 @@
 <center>
     <table border="0">
         <tr>
-			<th><iframe src="https://drive.google.com/file/d/1RLTg1SU8HtJfO9BBiY7ZJ4PmUwCYpYk5/view?usp=sharing" width="1000" height="600" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+			<th><iframe src="https://drive.google.com/file/d/1RLTg1SU8HtJfO9BBiY7ZJ4PmUwCYpYk5/preview" width="1000" height="600" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
 			</th>
             <th>
 			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSefeMd5mvkvy5KIBD9ecQTylRCFJpuQyGJLIJC2zfGh3feOCg/viewform?embedded=true" width="360" height="580" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
